@@ -1,6 +1,10 @@
 **Added**
 *Updated*
 ~~Fixed or Removed~~
+[2017040100]
+**hta for windows**
+*WebUI*
+
 [2017033102]
 *WebUI*
 ~~bugs~~
